--- a/wesport/templates/about.html
+++ b/wesport/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_fullpage.html" %}
 {% block content %}
         <h1>About page inter</h1>
 {% endblock content %}
