--- a/wesport/templates/club_home.html
+++ b/wesport/templates/club_home.html
@@ -23,20 +23,16 @@
     </fieldset>
 {% endblock content %}
 {% block right_content %}
-    <h3>My Sidebar</h3>
-        <div class="media">
-            <img class="rounded-circle account-img" src="{{ image_file }}">
-            <div class="media-body">
-              <h2 class="account-heading">{{current_user.username}}</h2>
-              <p class="text-secondary">{{ club.name }}</p>
-              <p class="text-secondary">{{ current_user.email }}</p>
-            </div>
+    <div class="media">
+        <img class="rounded-circle account-img" src="{{ image_file }}">
+        <div class="media-body">
+          <h2 class="account-heading">{{current_user.username}}</h2>
+          <p class="text-secondary">{{ club.name }}</p>
+          <p class="text-secondary">{{ current_user.email }}</p>
         </div>
-        <ul class="list-group">
-            <a class="list-group-item list-group-item-light" href="{{ url_for('club.add_field') }}">Add Field</a>
-            <li class="list-group-item list-group-item-light">Latest Posts</li>
-            <li class="list-group-item list-group-item-light">Announcements</li>
-            <li class="list-group-item list-group-item-light">Calendars</li>
-            <a class="list-group-item list-group-item-light" href="{{ url_for('main.account') }}">Settings</a>
-        </ul>
+    </div>
+    <ul class="list-group">
+        <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('club.add_field') }}">Add Field</a>
+        <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('main.account') }}">Settings</a>
+    </ul>
 {% endblock %}
