--- a/wesport/templates/club_register.html
+++ b/wesport/templates/club_register.html
@@ -1,6 +1,7 @@
-{% extends "layout.html" %}
+{% extends "layout_fullpage.html" %}
 {% block content %}
-        <div class="content-section">
+        <div class="row justify-content-center">
+            <div class="content-section col-10">
             <form method="post" action="">
                 {{ form.hidden_tag() }}
                 <fieldset class="form-group">
@@ -127,6 +128,7 @@
                     {{ form.submit(class="btn btn-outline-info") }}
                 </div>
             </form>
+            </div>
         </div>
         <div class="border-top pt-3">
             <small class="text-muted">
