--- a/wesport/templates/events.html
+++ b/wesport/templates/events.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h2>Hello Mr.{{ player.name}}, {{ player.surname }} !</h2> <br>
     <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Public events</legend>
+        <legend class="border-bottom mb-4">Join events</legend>
         {% for event in events %}
             <div class="content-section">
                 <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
@@ -41,11 +41,11 @@
             </div>
         </div>
         <ul class="list-group">
-            <a class="list-group-item list-group-item-light" href="{{ url_for('player.new_booking', location='nolocation') }}">New Booking</a>
-            <a class="list-group-item list-group-item-light" href="{{ url_for('player.my_bookings') }}">My Bookings</a>
-            <a class="list-group-item list-group-item-light" href="{{ url_for('player.my_events') }}">My Events</a>
-            <a class="list-group-item list-group-item-light" href="{{ url_for('player.events') }}">Public Events</a>
-            <a class="list-group-item list-group-item-light" href="{{ url_for('player.past_events') }}">Past Events</a>
-            <a class="list-group-item list-group-item-light" href="{{ url_for('main.account') }}">Settings</a>
+            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.new_booking', location='nolocation') }}">New Booking</a>
+            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.my_bookings') }}">My Bookings</a>
+            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.my_events') }}">My Events</a>
+            <a class="list-group-item list-group-item-action list-group-item-selected" href="{{ url_for('player.events') }}">Join Events</a>
+            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.past_events') }}">Past Events</a>
+            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('main.account') }}">Settings</a>
         </ul>
 {% endblock %}
