--- a/wesport/templates/home.html
+++ b/wesport/templates/home.html
@@ -1,3 +1,13 @@
-{% extends "layout.html" %}
+{% extends "layout_home.html" %}
 {% block content %}
+    <div class="text-center" >
+        <h1><b>No more excuses not to play sports! </b></h1>
+        <h2>Join our community! Play the sports you love and get to know new people!</h2>
+        </div>
+        <div class="text-center">
+        <h2 class="text-center">Check this out:</h2>
+        <video width="auto" autoplay controls>
+            <source src="../static/home_files/Wesports - Kickstarter.mp4">
+        </video>
+    </div>
 {% endblock content %}
