--- a/wesport/templates/club_register.html
+++ b/wesport/templates/club_register.html
@@ -128,7 +128,7 @@
                 </div>
             </form>
         </div>
-        <div class="border-top pt-3">
+        <div class="border-top pt-3" style="max-width: 400px;">
             <small class="text-muted">
                 Already Have An Account? <a class="ml-2" href="{{ url_for('main.login') }}">Sign In</a>
             </small>
