--- a/wesport/templates/add_field.html
+++ b/wesport/templates/add_field.html
@@ -1,53 +1,55 @@
-{% extends "layout.html" %}
+{% extends "layout_fullpage.html" %}
 {% block content %}
-        <div class="content-section">
-            <form method="post" action="">
-                {{ form.hidden_tag() }}
-                <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Add Field</legend>
+        <div class="row justify-content-center">
+            <div class="content-section col-10">
+                <form method="post" action="">
+                    {{ form.hidden_tag() }}
+                    <fieldset class="form-group">
+                        <legend class="border-bottom mb-4">Add Field</legend>
+                        <div class="form-group">
+                            {{ form.field_name.label(class="form-control-label") }}
+                            {% if form.field_name.errors %}
+                               {{ form.field_name(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.field_name.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.field_name(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.sport.label(class="form-control-label") }}
+                            {% if form.sport.errors %}
+                               {{ form.sport(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.sport.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.sport(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.max_people.label(class="form-control-label") }}
+                            {% if form.max_people.errors %}
+                               {{ form.max_people(class="form-control form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.max_people.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.max_people(class="form-control form-control-lg") }}
+                            {% endif %}
+                        </div>
+                    </fieldset>
                     <div class="form-group">
-                        {{ form.field_name.label(class="form-control-label") }}
-                        {% if form.field_name.errors %}
-                           {{ form.field_name(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.field_name.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.field_name(class="form-control form-control-lg") }}
-                        {% endif %}
+                        {{ form.submit(class="btn btn-outline-info") }}
                     </div>
-                    <div class="form-group">
-                        {{ form.sport.label(class="form-control-label") }}
-                        {% if form.sport.errors %}
-                           {{ form.sport(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.sport.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.sport(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.max_people.label(class="form-control-label") }}
-                        {% if form.max_people.errors %}
-                           {{ form.max_people(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.max_people.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.max_people(class="form-control form-control-lg") }}
-                        {% endif %}
-                    </div>
-                </fieldset>
-                <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
 {% endblock content %}
