--- a/wesport/templates/event.html
+++ b/wesport/templates/event.html
@@ -11,15 +11,11 @@
         {% else %}
             {% if player_status == 0 %}
             <div>
-                <form action="{{ url_for('player.join', event_id=booking.id) }}" method="POST">
-                    <input type="submit" value="Join" />
-                </form>
+                    <button type=button" class="btn btn-primary btn-sm m-1" data-toggle="modal" data-target="#joinModal">Join</button>
             </div>
         {% else %}
             <div>
-                <form action="{{ url_for('player.leave', event_id=booking.id) }}" method="POST">
-                    <input type="submit" value="Leave" />
-                </form>
+                    <button type=button" class="btn btn-primary btn-sm m-1" data-toggle="modal" data-target="#leaveModal">Leave</button>
             </div>
         {% endif %}
         {% endif %}
@@ -43,6 +39,44 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="joinModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteModalLabel">Join Event?</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <form action="{{ url_for('player.join', event_id=booking.id) }}" method="POST">
+                <input class="btn btn-primary" type="submit" value="Join">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="leaveModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteModalLabel">Leave Event?</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <form action="{{ url_for('player.leave', event_id=booking.id) }}" method="POST">
+                <input class="btn btn-primary" type="submit" value="Leave">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <p>Club: {{ club.name }}</p>
     <p>Field: {{ field.field_name }}</p>
     <legend class="border-bottom mb-4">Player list</legend>
@@ -57,7 +91,7 @@
     {% if player_status == 0 %}
     {% else %}
         <legend class="border-bottom mb-4">Event Chat</legend>
-        <div class="content-section">
+        <div class="content-section-post">
             {% for post in posts %}
                 <div class="comment">
                     <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + post.image_file) }}>
