--- a/wesport/templates/my_events.html
+++ b/wesport/templates/my_events.html
@@ -1,51 +1,51 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <h2>Hello Mr.{{ player.name}}, {{ player.surname }} !</h2> <br>
     <fieldset class="form-group">
     <legend class="border-bottom mb-4">My Events</legend>
-    {% for event in myevents %}
-        <div class="content-section">
-            <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
-            {% for field in fields %}
-                {% if field.id == event.field_id  %}
-                    {% for club in clubs %}
-                        {% if club.id == field.club_id %}
-                            <small>
-                                <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
-                            </small>
-                        {% endif %}
-                    {% endfor %}
-                {% endif %}
-            {% endfor %}
-            <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
-            <p class="article-content">Start Time: {{ event.startTime }}</p>
-            {% for participants in participants %}
-                {% if participants.booking == event.id %}
-                    <div>
-                        <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
-                        <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-    {% endfor %}
+    <div class="content-section-scroll" style="height: 600px">
+        {% for event in myevents %}
+            <div class="content-section">
+                <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">{{  event.title }}</a></h2>
+                {% for field in fields %}
+                    {% if field.id == event.field_id  %}
+                        {% for club in clubs %}
+                            {% if club.id == field.club_id %}
+                                <small>
+                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
+                                </small>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+                <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
+                <p class="article-content">Start Time: {{ event.startTime }}</p>
+                {% for participants in participants %}
+                    {% if participants.booking == event.id %}
+                        <div>
+                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
+                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        {% endfor %}
+    </div>
     </fieldset>
 {% endblock content %}
 {% block right_content %}
-    <h3>My Sidebar</h3>
-        <div class="media">
-            <img class="rounded-circle account-img" src="{{ image_file }}">
-            <div class="media-body">
-              <h2 class="account-heading">{{current_user.username}}</h2>
-              <p class="text-secondary">{{ current_user.email }}</p>
-            </div>
+    <div class="media">
+        <img class="rounded-circle account-img" src="{{ image_file }}">
+        <div class="media-body">
+          <h2 class="account-heading">{{current_user.username}}</h2>
+          <p class="text-secondary">{{ current_user.email }}</p>
         </div>
-        <ul class="list-group">
-            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.new_booking', location='nolocation') }}">New Booking</a>
-            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.my_bookings') }}">My Bookings</a>
-            <a class="list-group-item list-group-item-action list-group-item-selected" href="{{ url_for('player.my_events') }}">My Events</a>
-            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.events') }}">Join Events</a>
-            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.past_events') }}">Past Events</a>
-            <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('main.account') }}">Settings</a>
-        </ul>
+    </div>
+    <ul class="list-group">
+        <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.new_booking', location='nolocation') }}">New Booking</a>
+        <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.my_bookings') }}">My Bookings</a>
+        <a class="list-group-item list-group-item-action list-group-item-selected" href="{{ url_for('player.my_events') }}">My Events</a>
+        <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.events') }}">Join Events</a>
+        <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('player.past_events') }}">Past Events</a>
+        <a class="list-group-item list-group-item-action list-group-item-personal" href="{{ url_for('main.account') }}">Settings</a>
+    </ul>
 {% endblock %}
