--- a/wesport/templates/player_home.html
+++ b/wesport/templates/player_home.html
@@ -1,121 +1,90 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <h2>Hello Mr.{{ player.name}}, {{ player.surname }} !</h2> <br>
     <fieldset class="form-group">
         <legend class="border-bottom mb-4">My Bookings</legend>
-        {% for event in bookings %}
-            <div class="content-section">
-                <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
-                {% for field in fields %}
-                    {% if field.id == event.field_id  %}
-                        {% for club in clubs %}
-                            {% if club.id == field.club_id %}
-                                <small>
-                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
-                                </small>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                {% endfor %}
-                <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
-                <p class="article-content">Start Time: {{ event.startTime }}</p>
-                {% for participants in participants %}
-                    {% if participants.booking == event.id %}
-                        <div>
-                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
-                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
+        <div class="content-section-scroll">
+            {% for event in bookings %}
+                <div class="content-section">
+                    <div class="row">
+                        <div class="col-6">
+                            <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" >{{  event.title }}</a></h2>
+                            <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
+                            <p class="article-content">Start Time: {{ event.startTime }}</p>
+                            {% for participants in participants %}
+                                {% if participants.booking == event.id %}
+                                    <div>
+                                        <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
+                                        <small>
+                                            <a class="article-title" href="{{ url_for('player.players', player_id=participants.id) }}">{{ participants.name }} {{ participants.surname }}</a>
+                                        </small>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
                         </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        {% endfor %}
+                        <div class="col-6">
+                            <!--Google map-->
+                            <div id="map-container-google-8" class="z-depth-1-half map-container-5" style="height: 200px">
+                              <iframe src="https://maps.google.com/maps?q=Barcelona&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                frameborder="0" style="border:0" allowfullscreen></iframe>
+                            </div>
+                            {% for field in fields %}
+                                {% if field.id == event.field_id  %}
+                                    {% for club in clubs %}
+                                        {% if club.id == field.club_id %}
+                                            <small>
+                                                <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
+                                            </small>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </fieldset>
     <fieldset class="form-group">
         <legend class="border-bottom mb-4">My Events</legend>
-        {% for event in myevents %}
-            <div class="content-section">
-                <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
-                {% for field in fields %}
-                    {% if field.id == event.field_id  %}
-                        {% for club in clubs %}
-                            {% if club.id == field.club_id %}
-                                <small>
-                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
-                                </small>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                {% endfor %}
-                <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
-                <p class="article-content">Start Time: {{ event.startTime }}</p>
-                {% for participants in participants %}
-                    {% if participants.booking == event.id %}
-                        <div>
-                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
-                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        {% endfor %}
-    </fieldset>
-    <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Join events</legend>
-        {% for event in events %}
-            <div class="content-section">
-                <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
-                {% for field in fields %}
-                    {% if field.id == event.field_id  %}
-                        {% for club in clubs %}
-                            {% if club.id == field.club_id %}
-                                <small>
-                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
-                                </small>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                {% endfor %}
-                <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
-                <p class="article-content">Start Time: {{ event.startTime }}</p>
-                {% for participants in participants %}
-                    {% if participants.booking == event.id %}
-                        <div>
-                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
-                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        {% endfor %}
-    </fieldset>
-    <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Past events</legend>
-        {% for event in past_events %}
-            <div class="content-section">
-                <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}" target="_blank">Event : {{  event.title }}</a></h2>
-                {% for field in fields %}
-                    {% if field.id == event.field_id  %}
-                        {% for club in clubs %}
-                            {% if club.id == field.club_id %}
-                                <small>
-                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
-                                </small>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                {% endfor %}
-                <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
-                <p class="article-content">Start Time: {{ event.startTime }}</p>
-                {% for participants in participants %}
-                    {% if participants.booking == event.id %}
-                        <div>
-                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
-                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        {% endfor %}
+        <div class="content-section-scroll">
+            {% for event in myevents %}
+                <div class="content-section">
+                    <div class="row">
+                            <div class="col-6">
+                                <h2><a class="article-title" href="{{  url_for('player.event', event_id=event.id) }}">{{  event.title }}</a></h2>
+                                <p class="article-content">Date: {{ event.date.strftime("%d-%m-%Y") }}</p>
+                                <p class="article-content">Start Time: {{ event.startTime }}</p>
+                                {% for participants in participants %}
+                                    {% if participants.booking == event.id %}
+                                        <div>
+                                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
+                                            <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
+                                        </div>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                            <div class="col-6">
+                                <!--Google map-->
+                                <div id="map-container-google-8" class="z-depth-1-half map-container-5" style="height: 200px">
+                                  <iframe src="https://maps.google.com/maps?q=Barcelona&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                    frameborder="0" style="border:0" allowfullscreen></iframe>
+                                </div>
+                                {% for field in fields %}
+                                    {% if field.id == event.field_id  %}
+                                        {% for club in clubs %}
+                                            {% if club.id == field.club_id %}
+                                                <small>
+                                                    <p class="article-content">{{ club.name }} - {{ field.field_name }}</p>
+                                                </small>
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </fieldset>
 {% endblock content %}
 {% block right_content %}
