Footer and header bar adjusted Layout About adjusted (same for logged in or not) Page "About" started chat and participants formatted (scroll)
To be fixed:
- right bar (keep only in the user page, fix layout)
- Font
- Text not going out of space
- Fix right sidebar in user page (not symmetrical)
- Margin between body and header
- image too big

--- a/wesport/templates/about.html
+++ b/wesport/templates/about.html
@@ -1,32 +1,53 @@
 {% extends "layout_about.html" %}
 {% block content %}
-    <div class="container">
-        <h1>Who we are</h1>
-        <h4>We are 6 students from from Polytechnic University of Turin who are love Information Systems and Sports</h4>
+    <div class="row" >
+        <div class="col-7">
+            <h1><b>Who we are</b></h1>
+            <h4>We are Abdullah Ashfaq, Anas Khalike, Alberto Molinar Roet, Tommaso Sacchi, Matteo Babini and Davide Vercellone:
+                6 students from the Polytechnic University of Turin who are passionate about Information Systems and, most of all (sorry professor!) Sports.
+                We came up with the idea of creating a platform that could allow students to get to know other people while playing the sports they love. It may not be easy
+                to get a new place and get to know other people, especially someone to play sports with. Do not panic, we sorted it out: there is WeSports!
+            </h4>
+        </div>
+
+        <div class="col-5" style="max-width: 100%; margin-top: 5px;">
+            <div class="row">
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/about_images/Abdullah_Ashfaq.jpg" class="img-thumbnail">
+                </div>
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/about_images/Anas_Khalike.jpg" class="img-thumbnail">
+                </div>
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/about_images/Abdullah_Ashfaq.jpg" class="img-thumbnail">
+                </div>
+            </div>
+            <div class="row" style="margin-top: 15px;">
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/about_images/Abdullah_Ashfaq.jpg" class="img-thumbnail">
+                </div>
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/about_images/Abdullah_Ashfaq.jpg" class="img-thumbnail">
+                </div>
+                <div class="col" style="padding-right: 5px;">
+                    <img src="../static/about_images/Abdullah_Ashfaq.jpg" class="img-thumbnail">
+                </div>
+            </div>
+        </div>
+     </div>
+
+    <div class="row">
+        <div class="col">
+            <h1><b>What is Wesports</b></h1>
+            <h2 style="margin-top: 10px;"><b>If you want to play</b></h2>
+            <h4>Wesports is a platform that allows a user to create an event and invite her/his friends to join it. When booking, it is possible
+            to see on the map the clubs close to you, choose between them according to the sport you want to play, choose the field, the date and time.
+            Then you choose who to invite between your friends and off you go! Don't forget the stuff you need to play!</h4>
+            <h2><b>If you want players to come to your club</b></h2>
+            <h4>WeSports can be used not just by players, but by clubs as well! As a matter of fact, it can be used as a club manager, showing the user's clubs and fields per club available
+            for different sports and the position of the club on the map, so that players can find clubs in their city and around them. Through WeSports, a club can increase its visibility and
+            be automatically managed through WeSports. No more messy calendars, names and phone numbers to remember, just one smart web page to have complete control of your club!</h4>
+        </div>
     </div>
-    <div class="container">
-        <h1>What is Wesports</h1>
-        <h4>Wesports is a platform we developed so that people new in town can make new friends and keep practising the sports they love
-        without being worried about the fact that they do not have friends to play with or they do not know places where to play. Or just
-        book a field in a smart and fast way, without wasting time, and inviting they friends as well, or just find someone to play with
-         because your friends are paccons!</h4>
-    </div>
-    <div class="container">
-        <h1>What is Wesports</h1>
-        <h4>Wesports is a platform we developed so that people new in town can make new friends and keep practising the sports they love
-        without being worried about the fact that they do not have friends to play with or they do not know places where to play. Or just
-        book a field in a smart and fast way, without wasting time, and inviting they friends as well, or just find someone to play with
-         because your friends are paccons!</h4>
-    </div>
-    <div class="container">
-        <h1>What is Wesports</h1>
-        <h4>Wesports is a platform we developed so that people new in town can make new friends and keep practising the sports they love
-        without being worried about the fact that they do not have friends to play with or they do not know places where to play. Or just
-        book a field in a smart and fast way, without wasting time, and inviting they friends as well, or just find someone to play with
-         because your friends are paccons!</h4>
-    </div>
-    <div class="container">
-        <h1></h1>
-        <h4></h4>
-    </div>
+
 {% endblock content %}
