--- a/wesport/static/main.css
+++ b/wesport/static/main.css
@@ -24,6 +24,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
 }
 
+.navbar{
+    height:6vh;
+}
 
 .content-section {
   background: #ffffff;
@@ -34,7 +37,6 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 400px;
   text-overflow: ellipsis;
   position: relative;
-
 }
 
 .article-title {
