Footer and header bar adjusted Layout About adjusted (same for logged in or not) Page "About" started chat and participants formatted (scroll) Bar adjusted
To be fixed:
- right bar (keep only in the user page, fix layout)
- Font
- Text not going out of space
- Fix right sidebar in user page (not symmetrical)
- Margin between body and header
- image too big

--- a/wesport/static/main.css
+++ b/wesport/static/main.css
@@ -88,10 +88,11 @@ a.article-title:hover {
 
 .media{
   width: 200px;
+    height:auto;
 }
 
 .media-body{
-  width: 200px
+  width: 200px;
 }
 
 .foot-home {
@@ -109,11 +110,6 @@ a.article-title:hover {
     position: relative;
     width: 100%;
     max-width: 1125px;
-}
-
-.container img {
-    width: 100%;
-    height: auto;
 }
 
 .container .btn-left {
@@ -183,4 +179,10 @@ a.article-title:hover {
 
 #under-register{
     width: 400px;
+}
+
+.image-event-list{
+    margin-bottom: 2px;
+    padding-left: 2px;
+    padding-top: 2px;
 }
