--- a/wesport/templates/layout.html
+++ b/wesport/templates/layout.html
@@ -96,7 +96,7 @@
         </div>
         {% if current_user.is_authenticated %}
         <div class="col-md-4">
-          <div class="content-section" style="height: 520px; overflow-y: auto; width: 340px; ">
+          <div class="content-section" style="height: auto; overflow-y: auto; width: 340px; padding-top: 5px; padding-bottom: 15px;">
               {% block right_content %}{% endblock %} <!--right side page content block-->
           </div>
         </div>
