--- a/wesport/templates/player_home.html
+++ b/wesport/templates/player_home.html
@@ -82,7 +82,8 @@
                 <p class="article-content">Start Time: {{ event.startTime }}</p>
                 {% for participants in participants %}
                     {% if participants.booking == event.id %}
-                        <div>
+                        <div class="image-event-list">
+                            <img class="rounded-circle" width="30" height="30" src={{ url_for('static', filename='profile_pics/' + participants.image_file) }}>
                             <small class="article-content">{{ participants.name }} {{ participants.surname }}</small>
                         </div>
                     {% endif %}
