Footer and header bar adjusted Layout About adjusted (same for logged in or not) Page "About" started chat and participants formatted (scroll) Bar adjusted
To be fixed:
- right bar (keep only in the user page, fix layout)
- Font
- Text not going out of space
- Fix right sidebar in user page (not symmetrical)
- Margin between body and header
- image too big

--- a/wesport/static/main.css
+++ b/wesport/static/main.css
@@ -183,6 +183,5 @@ a.article-title:hover {
 
 .image-event-list{
     margin-bottom: 2px;
-    padding-left: 2px;
-    padding-top: 2px;
+    padding:3px;
 }
