Footer and header bar adjusted Layout About adjusted (same for logged in or not) Page "About" started chat and participants formatted (scroll) Bar adjusted
To be fixed:
- right bar (keep only in the user page, fix layout)
- Font
- Text not going out of space
- Fix right sidebar in user page (not symmetrical)
- Margin between body and header
- image too big

--- a/wesport/templates/player_home.html
+++ b/wesport/templates/player_home.html
@@ -102,7 +102,7 @@
             </div>
         </div>
         <ul class="list-group">
-            <a class="list-group-item list-group-item-light" href="{{ url_for('player.new_booking', location='nolocation') }}">New Booking</a>
+            <a style="background-color: #fe7b1f; color: #ffffff;" class="list-group-item list-group-item-light" href="{{ url_for('player.new_booking', location='nolocation') }}">New Booking</a>
             <li class="list-group-item list-group-item-light">My Bookings</li>
             <li class="list-group-item list-group-item-light">My Events</li>
             <li class="list-group-item list-group-item-light">Public Events</li>
