--- a/wesport/templates/account.html
+++ b/wesport/templates/account.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_login_register.html" %}
 {% block content %}
     <div class="content-section" xmlns="http://www.w3.org/1999/html">
           <div class="media">
