--- a/wesport/templates/layout_login_register.html
+++ b/wesport/templates/layout_login_register.html
@@ -97,9 +97,9 @@
         </div>
         {% if current_user.is_authenticated %}
         <div class="col-md-4">
-          <div class="content-section" style="height: 430px; overflow-y: scroll; width: 340px; ">
+        <!--  <div class="content-section" style="height: 430px; overflow-y: scroll; width: 340px; "> -->
               {% block right_content %}{% endblock %} <!--right side page content block-->
-          </div>
+          <!--</div>-->
         </div>
       {% endif  %}
       </div>
