--- a/wesport/templates/home.html
+++ b/wesport/templates/home.html
@@ -12,7 +12,7 @@
             </video>
             </div>
 
-            <div class="container" style="margin-top: 20px;">
+            <div class="container home" style="margin-top: 20px; width:100%;">
                 <img class="mySlides" src="../static/home_images/batigol_fiore.jpg"
                  alt="Batigol" title="Batigol" width="400px">
                  <img class="mySlides" src="../static/home_images/rosina_toro.jpg"
